# scores.frc.sh

./: .editorconfig  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  biome.json  bun.lockb  components.json  convex.json  drizzle.config.ts  knip.config.ts  mise.toml  openapi.json  package.json  pwa-assets.config.ts  pyproject.toml  railpack.json  railway.json  tsconfig.json  turbo.json  vite.config.ts
.cursor/: mcp.json
apps/api/: alembic.ini  atlas.hcl  main.py  package.json  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  event_service.py  jobs_service.py  logger.py  main.py  models.py  scores_service.py  tba_service.py
apps/api/app/alembic/: env.py
apps/api/app/db/: db.py  models.py
apps/api/app/event/: event_service.py  types.py
apps/api/app/first/: first_service.py  types.py
apps/api/app/match/: match_service.py  types.py
apps/api/app/models/: models.py
apps/api/app/tba/: tba_service.py  types.py
apps/api/migrations/: 20250505233309.sql  atlas.sum
apps/api/src/: app.module.ts  index.ts  main.ts
apps/api/src/api/: api.service.ts
apps/api/src/cache-manager/: cache-manager.constants.ts  cache-manager.module.ts  cache-manager.service.ts
apps/api/src/config/: config.service.ts
apps/api/src/db/: schema.ts  util.ts
apps/api/src/events/: events.module.ts  events.service.ts  fetch-events.processor.ts  fetch-events.worker.ts
apps/api/src/first/: first.module.ts  first.service.ts
apps/api/src/health/: health.controller.ts
apps/api/src/high-scores/: high-scores.module.ts  high-scores.router.ts  high-scores.service.ts
(+148 files in other folders)
