[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlas-provider-sqlalchemy>=0.2.4",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
