[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "psycopg>=3.2.7",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "sqlalchemy[asyncio]",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.uv.sources]
sqlalchemy = { git = "https://github.com/sqlalchemy/sqlalchemy" }
